Fix stuff, left-align header

--- a/content/assets/style.scss
+++ b/content/assets/style.scss
@@ -60,8 +60,7 @@ code {
 
 #header {
     margin-bottom: $spacing;
-    text-align: center;
-    padding-bottom: 0.5em;
+    padding-bottom: 1em;
     border-bottom: 3px black solid;
     a {
         display: inline-block;
@@ -70,7 +69,7 @@ code {
     img {
         vertical-align: middle;
         height: 3em;
-        padding: 0.5em;
+        padding-right: 0.5em;
     }
     ul {
         font-size: 1.2em;
